en and zh index content updated

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <title>CN-BCOL 2020 中国区块链奥林匹克竞赛 | IBCOL 国际区块链奥林匹克竞赛</title>
     <link rel="icon" href="./images/logo/IBCOL-CN.png" type="image/gif" sizes="16x16">
-    <meta name="description" content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
+    <meta name="description"
+        content="中国区块链奥林匹克竞赛委员会（CN-BCOL）是国际区块链奥林匹克委员会与中国的一些学术和行业专业人士共同组成。在IBCOL 2019上，三支代表中国的参赛队伍分别来自广州民航职业技术学院（获得IBCOL 2019-铜奖）、中山大学和南京农业大学。而今年的IBCOL 2020，CN-BCOL将会选出最多12支中国代表队伍参加竞赛。" />
     <meta name="author" content="" />
-    <meta property="og:image" content="./images/logo/IBCOL-CN.png"/>
+    <meta property="og:image" content="./images/logo/IBCOL-CN.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -54,8 +55,8 @@
                 </li>
                 <li><a class="NavLinkComponent colorWt" route="" href="faq-cn-bcol.html" class="">常见问题 </a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="contact-cn-bcol.html" class="">联络我们</a></li>
-                <li><a class="NavLinkComponent colorWt regBorder" route=""
-                        href="https://wj.qq.com/s2/6039506/da39/" target="_blank">注册</a></li>
+                <li><a class="NavLinkComponent colorWt regBorder" route="" href="https://wj.qq.com/s2/6039506/da39/"
+                        target="_blank">注册</a></li>
                 <li><a class="NavLinkComponent colorWt" route="" href="./en/index.html" class="">EN</a></li>
             </ul>
         </div>
@@ -80,9 +81,8 @@
         </a>
     </header>
 
-    <section id="home" class="s-home page-hero target-section" data-parallax="scroll"
-        data-image-src="images/cn.jpg" data-natural-width="3000"
-        data-natural-height="2000" data-position-y="center">
+    <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/cn.jpg"
+        data-natural-width="3000" data-natural-height="2000" data-position-y="center">
         <div class="grid-overlay">
             <div></div>
         </div>
@@ -119,8 +119,7 @@
                         </a>
                     </div> -->
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="https://www.cb.cityu.edu.hk"
-                            target="_blank">
+                        <a href="https://www.cb.cityu.edu.hk" target="_blank">
                             <div>
                                 <img class="sponsorImg" src="images/sponsor/IBCOL-2020-Organiser-CityU-CoB.png">
                             </div>
@@ -170,7 +169,7 @@
     </section>
 
 
-    <section class="s-section target-section" id="about">
+    <!-- <section class="s-section target-section" id="about">
         <div class="row">
             <div class="block-1-2">
                 <div class="col-block col-b-12">
@@ -211,6 +210,73 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="s-section target-section" id="about">
+        <div class="row my-auto colorBk">
+            <div class="photoTitle photoWithTextSector">
+                <h2 style="all:unset;">CNBCOL 2020 Award Winners</h2>
+            </div>
+            <div class="col-md-12 col-sm-12">
+                <!-- 得奖者可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策 -->
+                <ul>
+                    <li>
+                        <a target="_blank"
+                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Genie/index.html">Support
+                            X</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/PracticeTogether/index.html">PracticeTogether</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Carbonbase/index.html">Carbonbase</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/LifeBlock/index.html">LifeBlock</a>
+                    </li>
+                    <li>
+                        <a target="_blank"
+                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Golden%20Pear/index.html">Golden
+                            Pear</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section class="s-section target-section" id="about">
+        <div class="row my-auto colorBk">
+            <div class="photoTitle photoWithTextSector">
+                <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
+            </div>
+            <div class="col-md-12 col-sm-12">
+                得奖者可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策
+                <ul>
+                    <li>申请工商管理学士项目获得材料评审加分</li>
+                    <li>申请工商管理学士（上海1+3）项目获得材料评审加分 + VIP职业导师福利</li>
+                    <li>申请大学校硕士（GE）项目最高获得半额奖学金
+                        （2020QS Master in Management管理学硕士项目全球第14）</li>
+                    <li>申请金融学专业硕士项目最高获得15%奖学金
+                        （2020QS Master in Finance金融硕士项目全球第15）</li>
+                </ul>
+            </div>
+
+            <div class="col-md-12 col-sm-12">
+                得獎者指：
+                <ul>
+                    <li>2020 CN-BCOL区块链竞赛－优秀奖</li>
+                    <li>2020 CN-BCOL区块链竞赛－中国代表队（最多12队）</li>
+                    <li>2020 IBCOL金奖</li>
+                    <li>2020 IBCOL银奖</li>
+                    <li>2020 IBCOL铜奖</li>
+                    <li>2020 IBCOL最佳技术</li>
+                    <li>2020 IBCOL大众投票「最具创新力项目」、「最有前途项目」、「最有影响力项目」</li>
+                </ul>
             </div>
         </div>
     </section>
@@ -354,10 +420,9 @@
     </section>
 
     <div class="home-content__button aboveFooterBtn">
-        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank"
-            class="btn btn--primary btn--large fs18">注册</a>
-               <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
- </a>
+        <a href="https://wj.qq.com/s2/6039506/da39/" target="_blank" class="btn btn--primary btn--large fs18">注册</a>
+        <a href="https://wj.qq.com/s2/6269232/8d41/" target="_blank" class="btn btn--large fs18">发掘更多
+        </a>
     </div>
 
 
@@ -367,7 +432,8 @@
             <div class="col-md-4 col-sm-4 mt-3 ">
                 <div class="footerHeaderText left"><b>关于我们</b> </div>
                 <div class="">
-                    <p class="footerParaText justify">国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
+                    <p class="footerParaText justify">
+                        国际区块链奥林匹克竞赛（I​​BCOL）是一年一度的全球性竞赛，邀请在学和刚毕业的学生参加，提供利用区块链技术解决真赛世界困难的方案。 </p>
                 </div>
             </div>
 
@@ -376,7 +442,7 @@
                 <div class="row">
                     <div class="col-12">
                         <p class="footerParaText justify">关注国际区块链奥林匹克（IBCOL）社交媒体频道可得到更多最新资讯
-</p>
+                        </p>
                     </div>
                     <br>
                     <div class="col-12 mb-4">
@@ -390,7 +456,8 @@
                                 src="./images/sm/fb.png"></a>&nbsp;&nbsp;
                         <a href="https://www.linkedin.com/company/ibcol" target="_blank"><img class="media768FooterImg"
                                 src="./images/sm/li.png"></a>&nbsp;&nbsp;</div>
-                </div>               <div class="col-12 mb-4 mt-4">
+                </div>
+                <div class="col-12 mb-4 mt-4">
 
                 </div>
             </div>
