CNBCOL 2020 Award Winners and CNBCOL 2020 Prizes updated

--- a/en/index.html
+++ b/en/index.html
@@ -214,37 +214,62 @@
         </div>
     </section> -->
 
+
     <section class="s-section target-section" id="about">
         <div class="row my-auto colorBk">
             <div class="photoTitle photoWithTextSector">
                 <h2 style="all:unset;">CNBCOL 2020 Award Winners</h2>
             </div>
-            <div class="col-md-12 col-sm-12">
-                <!-- 得奖者可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策 -->
-                <ul>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Genie/index.html">Support
-                            X</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/PracticeTogether/index.html">PracticeTogether</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Carbonbase/index.html">Carbonbase</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/LifeBlock/index.html">LifeBlock</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Golden%20Pear/index.html">Golden
-                            Pear</a>
-                    </li>
-                </ul>
+
+
+            <div class="row w-100 justify-content-center">
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="cursor-pointer" onclick="visitTeamPage(1)">
+                        <img src="../images/uni/清华大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Carbonbase</p>
+                            <p>Award of merit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(2)">
+                        <img src="../images/uni/北京交通大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Golden
+                                Pear</p>
+                            <p>Award of merit</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row w-100 justify-content-center">
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(3)">
+                        <img src="../images/uni/北京大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">PracticeTogether</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(4)">
+                        <img src="../images/uni/黑龙江大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Support X</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(5)">
+                        <img src="../images/uni/清华大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">LifeBlock</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -255,40 +280,16 @@
                 <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
             </div>
             <div class="col-md-12 col-sm-12">
-                Emlyon business school’s offer (for the Winners of “2020 CN-BCOL”& “2020 IBCOL”)
+                emlyon business school’s offer (for the Chinese Team of “2020 CN-BCOL”)
                 <ul>
-                    <li>Fast pass for the emlyon business school Global BBA program (bachelor degree) applicant</li>
+                    <li>Fast pass for the emlyon business school Global BBA program (bachelor degree) applicant;
+                    </li>
                     <li>Fast pass + VIP career mentor service for the emlyon business school Global BBA program (1+3
-                        bachelor degree); <br>this program is1 year study in Shanghai and 3 years study in France</li>
-                    <br>
-                    <p class="mb-0">Scholarship offer to Master Programs (1 Grande-Ecole, 1 MSc in) applicant:</p>
-                    <li>Admitted students are granted with scholarship PGE: 20- 50% of the study fee / MSc in Finance:
-                        10 - 15% of 1st year tuition fee;</li>
-                </ul>
-            </div>
+                        bachelor degree); this program is1 year study in Shanghai and 3 years study in France. </li>
 
-            <div class="col-md-12 col-sm-12">
-                The winners include “2020 CN-BCOL” and “2020 IBCOL”winners:
-                <ul>
-                    <li>2020 CN-BCOL Award of Merit </li>
-                    <li>2020 CN-BCOL Chinese Team
-                    </li>
-                    <li> 2020 IBCOL Gold Medal</li>
-                    <li>
-                        2020 IBCOL Silver Medal
-                    </li>
-                    <li>
-                        2020 IBCOL Bronze Medal
-                    </li>
-                    <li>
-                        2020 IBCOL Best Prototype
-                    </li>
-                    <li>
-                        2020 IBCOL Award of Merit
-                    </li>
-                    <li>
-                        2020 IBCOL People's Choice –“Most Innovative Project”、“ Most Promising Project”、“Most Impactful
-                        Project”
+                    <li>Scholarship offer to Master Programs (1 Grande-Ecole, 1 MSc in) applicant:
+                        Admitted students are granted with scholarship PGE: 20- 50% of the study fee / MSc in Finance:
+                        10 - 15% of 1st year tuition fee;
                     </li>
                 </ul>
             </div>
