--- a/index.html
+++ b/index.html
@@ -219,35 +219,60 @@
             <div class="photoTitle photoWithTextSector">
                 <h2 style="all:unset;">CNBCOL 2020 Award Winners</h2>
             </div>
-            <div class="col-md-12 col-sm-12">
-                <!-- 得奖者可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策 -->
-                <ul>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Genie/index.html">Support
-                            X</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/PracticeTogether/index.html">PracticeTogether</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Carbonbase/index.html">Carbonbase</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/LifeBlock/index.html">LifeBlock</a>
-                    </li>
-                    <li>
-                        <a target="_blank"
-                            href="https://www.ibcol.org/2020EXPO/2020-IBCOL-Finalists/CN-12-representatives/Golden%20Pear/index.html">Golden
-                            Pear</a>
-                    </li>
-                </ul>
+
+
+            <div class="row w-100 justify-content-center">
+                <div class="col-md-4 col-sm-12 text-center">
+                    <div class="cursor-pointer" onclick="visitTeamPage(1)">
+                        <img src="../images/uni/清华大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Carbonbase</p>
+                            <p>Award of merit</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(2)">
+                        <img src="../images/uni/北京交通大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Golden
+                                Pear</p>
+                            <p>Award of merit</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row w-100 justify-content-center">
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(3)">
+                        <img src="../images/uni/北京大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">PracticeTogether</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(4)">
+                        <img src="../images/uni/黑龙江大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">Support X</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12 text-center cursor-pointer">
+                    <div class="cursor-pointer" onclick="visitTeamPage(5)">
+                        <img src="../images/uni/清华大学.png">
+                        <div class="">
+                            <p class="fs-24 mb-0">LifeBlock</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
 
     <section class="s-section target-section" id="about">
         <div class="row my-auto colorBk">
@@ -255,27 +280,18 @@
                 <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
             </div>
             <div class="col-md-12 col-sm-12">
-                得奖者可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策
+                中国代表队可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策
                 <ul>
-                    <li>申请工商管理学士项目获得材料评审加分</li>
-                    <li>申请工商管理学士（上海1+3）项目获得材料评审加分 + VIP职业导师福利</li>
+                    <li>申请工商管理学士项目获得材料评审加分
+                    </li>
+                    <li>申请工商管理学士（上海1+3）项目获得材料评审加分 + VIP职业导师福利
+                    </li>
                     <li>申请大学校硕士（GE）项目最高获得半额奖学金
-                        （2020QS Master in Management管理学硕士项目全球第14）</li>
+                        （2020QS Master in Management管理学硕士项目全球第14）
+                    </li>
                     <li>申请金融学专业硕士项目最高获得15%奖学金
-                        （2020QS Master in Finance金融硕士项目全球第15）</li>
-                </ul>
-            </div>
-
-            <div class="col-md-12 col-sm-12">
-                得獎者指：
-                <ul>
-                    <li>2020 CN-BCOL区块链竞赛－优秀奖</li>
-                    <li>2020 CN-BCOL区块链竞赛－中国代表队（最多12队）</li>
-                    <li>2020 IBCOL金奖</li>
-                    <li>2020 IBCOL银奖</li>
-                    <li>2020 IBCOL铜奖</li>
-                    <li>2020 IBCOL最佳技术</li>
-                    <li>2020 IBCOL大众投票「最具创新力项目」、「最有前途项目」、「最有影响力项目」</li>
+                        （2020QS Master in Finance金融硕士项目全球第15）
+                    </li>
                 </ul>
             </div>
         </div>
