CNBCOL 2020 Award Winners wording updated

--- a/en/index.html
+++ b/en/index.html
@@ -228,7 +228,7 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Carbonbase</p>
-                            <p>Award of merit</p>
+                            <p>IBCOL Award of merit</p>
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                         <div class="">
                             <p class="fs-24 mb-0">Golden
                                 Pear</p>
-                            <p>Award of merit</p>
+                            <p>IBCOL Award of merit</p>
                         </div>
                     </div>
                 </div>
@@ -251,6 +251,7 @@
                         <img src="../images/uni/北京大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">PracticeTogether</p>
+                            <p>Representative of China</p>
                         </div>
                     </div>
                 </div>
@@ -259,6 +260,7 @@
                         <img src="../images/uni/黑龙江大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Support X</p>
+                            <p>Representative of China</p>
                         </div>
                     </div>
                 </div>
@@ -267,6 +269,7 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">LifeBlock</p>
+                            <p>Representative of China</p>
                         </div>
                     </div>
                 </div>
