--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Carbonbase</p>
-                            <p>Award of merit</p>
+                            <p>国际区块链奥林匹克竞赛优异奖</p>
                         </div>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                         <div class="">
                             <p class="fs-24 mb-0">Golden
                                 Pear</p>
-                            <p>Award of merit</p>
+                            <p>国际区块链奥林匹克竞赛优异奖</p>
                         </div>
                     </div>
                 </div>
@@ -250,6 +250,7 @@
                         <img src="../images/uni/北京大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">PracticeTogether</p>
+                            <p>国家代表队</p>
                         </div>
                     </div>
                 </div>
@@ -258,6 +259,7 @@
                         <img src="../images/uni/黑龙江大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Support X</p>
+                            <p>国家代表队</p>
                         </div>
                     </div>
                 </div>
@@ -266,6 +268,7 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">LifeBlock</p>
+                            <p>国家代表队</p>
                         </div>
                     </div>
                 </div>
