CNBCOL 2020 Award Winners wording fixed

--- a/en/index.html
+++ b/en/index.html
@@ -228,7 +228,8 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Carbonbase</p>
-                            <p>IBCOL Award of merit</p>
+                            <p class="mb-0">IBCOL Award of merit</p>
+                            <p>Representative of China</p>
                         </div>
                     </div>
                 </div>
@@ -238,7 +239,8 @@
                         <div class="">
                             <p class="fs-24 mb-0">Golden
                                 Pear</p>
-                            <p>IBCOL Award of merit</p>
+                            <p class="mb-0">IBCOL Award of merit</p>
+                            <p>Representative of China</p>
                         </div>
                     </div>
                 </div>
