--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
                         <img src="../images/uni/清华大学.png">
                         <div class="">
                             <p class="fs-24 mb-0">Carbonbase</p>
-                            <p>国际区块链奥林匹克竞赛优异奖</p>
+                            <p class="mb-0">国际区块链奥林匹克竞赛优异奖</p>
+                            <p>国家代表队</p>
                         </div>
                     </div>
                 </div>
@@ -237,7 +238,8 @@
                         <div class="">
                             <p class="fs-24 mb-0">Golden
                                 Pear</p>
-                            <p>国际区块链奥林匹克竞赛优异奖</p>
+                            <p class="mb-0">国际区块链奥林匹克竞赛优异奖</p>
+                            <p>国家代表队</p>
                         </div>
                     </div>
                 </div>
