CNBCOL 2020 Prizes wording fixed

--- a/en/index.html
+++ b/en/index.html
@@ -285,7 +285,7 @@
                 <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
             </div>
             <div class="col-md-12 col-sm-12">
-                emlyon business school’s offer (for the Chinese Team of “2020 CN-BCOL”)
+                em<b>lyon business school</b>’s offer (for the Chinese Team of “2020 CN-BCOL”)
                 <ul>
                     <li>Fast pass for the emlyon business school Global BBA program (bachelor degree) applicant;
                     </li>
