CNBCOL 2020 Prizes wording fixed2

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <h2 style="all:unset;">CNBCOL 2020 Prizes</h2>
             </div>
             <div class="col-md-12 col-sm-12">
-                中国代表队可获得来自大学机构「法国里昂商学院emlyon business school」的奖励政策
+                中国代表队可获得来自大学机构「法国里昂商学院em<b>lyon business school</b>」的奖励政策
                 <ul>
                     <li>申请工商管理学士项目获得材料评审加分
                     </li>
