--- a/en/index.html
+++ b/en/index.html
@@ -287,9 +287,10 @@
             <div class="col-md-12 col-sm-12">
                 em<b>lyon business school</b>’s offer (for the Chinese Team of “2020 CN-BCOL”)
                 <ul>
-                    <li>Fast pass for the emlyon business school Global BBA program (bachelor degree) applicant;
+                    <li>Fast pass for the em<b>lyon business school</b> Global BBA program (bachelor degree) applicant;
                     </li>
-                    <li>Fast pass + VIP career mentor service for the emlyon business school Global BBA program (1+3
+                    <li>Fast pass + VIP career mentor service for the em<b>lyon business school</b> Global BBA program
+                        (1+3
                         bachelor degree); this program is1 year study in Shanghai and 3 years study in France. </li>
 
                     <li>Scholarship offer to Master Programs (1 Grande-Ecole, 1 MSc in) applicant:
