--- a/en/index.html
+++ b/en/index.html
@@ -109,6 +109,7 @@
         </div>
     </section>
 
+
     <section id="sponsors" class=" s-section target-section pt-0">
         <div class="row section-header">
             <div class="photoTitle mt-5 mb-2 photoWithTextSector">
@@ -119,21 +120,21 @@
                     <!-- <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://www.hsbc.com.hk" target="_blank">
                             <div>
-                                <img class="sponsorImg" src=".././images/sponsor/IBCOL-2020-Organiser-HSBC.png">
+                                <img class="sponsorImg" src="images/sponsor/IBCOL-2020-Organiser-HSBC.png">
                             </div>
                         </a>
                     </div> -->
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://www.cb.cityu.edu.hk" target="_blank">
                             <div>
-                                <img class="sponsorImg" src=".././images/sponsor/IBCOL-2020-Organiser-CityU-CoB.png">
+                                <img class="sponsorImg" src="../images/sponsor/IBCOL-2020-Organiser-CityU-CoB.png">
                             </div>
                         </a>
                     </div>
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://www.hkbcs.org" target="_blank">
                             <div>
-                                <img class="sponsorImg" src=".././images/sponsor/IBCOL-2020-Organiser-HKBCS.png">
+                                <img class="sponsorImg" src="../images/sponsor/IBCOL-2020-Organiser-HKBCS.png">
                             </div>
                         </a>
                     </div>
@@ -149,7 +150,7 @@
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://talentdevelopment.institute/" target="_blank">
                             <div>
-                                <img class="sponsorImg" src=".././images/sponsor/sp2.jpg">
+                                <img class="sponsorImg" src="../images/sponsor/tdi.jpg">
                             </div>
                         </a>
                     </div>
@@ -157,17 +158,36 @@
                         <a href="https://www.facebook.com/pages/category/Education/icollegehk-1878155125790458/"
                             target="_blank">
                             <div>
-                                <img class="sponsorImg" src=".././images/sponsor/sp1.jpg">
+                                <img class="sponsorImg" src="../images/sponsor/iCollege.jpg">
                             </div>
                         </a>
                     </div>
-                    <!-- <div class="col-block widthSmFix paddingSmFix">
-                        <a href="https://www.hkbcs.org" target="_blank">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="block-1-3">
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="https://www.em-lyon.com/en" target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/sp3.jpg">
+                                <img class="sponsorImg" src="../images/sponsor/emlyon.jpg">
                             </div>
                         </a>
-                    </div> -->
+                    </div>
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="http://www.x-lab.tsinghua.edu.cn/" target="_blank">
+                            <div>
+                                <img class="sponsorImg" src="../images/sponsor/QH xlab.jpg">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="">
+                            <div>
+                                <img class="sponsorImg" src="../images/sponsor/mizmid.jpg">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
