--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
                         <a href="https://talentdevelopment.institute/" target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/sp2.jpg">
+                                <img class="sponsorImg" src="images/sponsor/tdi.jpg">
                             </div>
                         </a>
                     </div>
@@ -152,17 +152,36 @@
                         <a href="https://www.facebook.com/pages/category/Education/icollegehk-1878155125790458/"
                             target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/sp1.jpg">
+                                <img class="sponsorImg" src="images/sponsor/iCollege.jpg">
                             </div>
                         </a>
                     </div>
-                    <!-- <div class="col-block widthSmFix paddingSmFix">
-                        <a href="https://www.hkbcs.org" target="_blank">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="block-1-3">
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="https://www.em-lyon.com/en" target="_blank">
                             <div>
-                                <img class="sponsorImg" src="images/sponsor/sp3.jpg">
+                                <img class="sponsorImg" src="images/sponsor/emlyon.jpg">
                             </div>
                         </a>
-                    </div> -->
+                    </div>
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="http://www.x-lab.tsinghua.edu.cn/" target="_blank">
+                            <div>
+                                <img class="sponsorImg" src="images/sponsor/QH xlab.jpg">
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-block widthSmFix paddingSmFix w100-w375">
+                        <a href="">
+                            <div>
+                                <img class="sponsorImg" src="images/sponsor/mizmid.jpg">
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
