icollege - fixing links

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </a>
                     </div>
                     <div class="col-block widthSmFix paddingSmFix w100-w375">
-                        <a href="https://icollege.hk" target="_blank">
+                        <a href="https://www.icollege.hk" target="_blank">
                             <div>
                                 <img class="sponsorImg" src="images/sponsor/iCollege.jpg">
                             </div>
